--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Alexys-LAURENT/PORTFOLIO-2023/issues"
   },
-  "homepage": "https://github.com/Alexys-LAURENT/PORTFOLIO-2023#readme"
+  "homepage": "https://github.com/Alexys-LAURENT/PORTFOLIO-2023#readme",
+  "dependencies": {
+    "chart.js": "^4.0.1"
+  }
 }
